# detection-opencv-pytorch

./: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  inference.Dockerfile  kafka.Dockerfile  pyproject.toml
.build/: kafka-server.properties  supervisord.conf  zookeeper.properties
src/: appManager.py  main.py
src/camera/: camera.py
src/config/: config.py  logging.conf
src/model/: model.py
src/publish/: config.json  kafkaPub.py
